creational structural behavioral

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "singleton": "babel-node ./js/singleton/index.js",
-    "prototype": "babel-node ./js/prototype/index.js",
-    "proxy": "babel-node ./js/proxy/index.js",
-    "mediator": "babel-node ./js/mediator/index.js"
+    "singleton": "babel-node js/creational/singleton/index.js",
+    "prototype": "babel-node js/creational/prototype/index.js",
+    "proxy": "babel-node js/structural/proxy/index.js",
+    "mediator": "babel-node js/behavioral/mediator/index.js"
   },
   "repository": {
     "type": "git",
