--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "simple-factory": "babel-node js/creational/factory/simple-factory/index.js",
     "factory-method": "babel-node js/creational/factory/factory-method/index.js",
     "abstract-factory": "babel-node js/creational/factory/abstract-factory/index.js",
+    "builder": "babel-node js/creational/builder/ex1/index.js",
+    "builder2": "babel-node js/creational/builder/ex2/index.js",
     "proxy": "babel-node js/structural/proxy/index.js",
     "flyweight": "babel-node js/structural/flyweight/index.js",
     "mediator": "babel-node js/behavioral/mediator/index.js",
