--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "builder2": "babel-node js/creational/builder/ex2/index.js",
     "proxy": "babel-node js/structural/proxy/index.js",
     "flyweight": "babel-node js/structural/flyweight/index.js",
+    "adapter": "babel-node js/structural/adapter/index.js",
     "mediator": "babel-node js/behavioral/mediator/index.js",
     "command": "babel-node js/behavioral/command/index.js"
   },
