--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "flyweight": "babel-node js/structural/flyweight/index.js",
     "adapter": "babel-node js/structural/adapter/index.js",
     "mediator": "babel-node js/behavioral/mediator/index.js",
-    "command": "babel-node js/behavioral/command/other_example/index.js"
+    "command": "babel-node js/behavioral/command/other_example/index.js",
+    "chain-of-responsibility": "babel-node js/behavioral/chain-of-responsibility/index.js"
   },
   "repository": {
     "type": "git",
