--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mediator": "babel-node js/behavioral/mediator/index.js",
     "command": "babel-node js/behavioral/command/other_example/index.js",
     "chain-of-responsibility": "babel-node js/behavioral/chain-of-responsibility/index.js",
-    "iterator": "babel-node js/behavioral/iterator/index.js"
+    "iterator": "babel-node js/behavioral/iterator/index.js",
+    "state": "babel-node js/behavioral/state/index.js"
   },
   "repository": {
     "type": "git",
