--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "command": "babel-node js/behavioral/command/other_example/index.js",
     "chain-of-responsibility": "babel-node js/behavioral/chain-of-responsibility/index.js",
     "iterator": "babel-node js/behavioral/iterator/index.js",
-    "state": "babel-node js/behavioral/state/index.js"
+    "state": "babel-node js/behavioral/state/index.js",
+    "visitor": "babel-node js/behavioral/visitor/index.js"
   },
   "repository": {
     "type": "git",
